--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,7 @@
   --Light--Gray: #d3d3d3;
   --Dark-Light--Gray: #8c8b8b;
   --background-color: #fafafa;
+  --Light-Gray-2: #e0e0e0;
 }
 
 body {
@@ -150,14 +151,10 @@ body {
   font-size: 14px;
 }
 /*Styling Checkboxes*/
-#all_day_check,
-#habit_end_check,
-#set_reminder_check {
+#all_day_check {
   display: none;
 }
-.all_day_chek,
-.habit_end_check,
-.set_reminder_check {
+.all_day_chek {
   width: 18px;
   height: 18px;
   border: 2px solid var(--Light--Gray);
@@ -168,22 +165,59 @@ body {
   justify-content: center;
   flex-shrink: 0;
 }
-.all_day_chek::after,
-.habit_end_check::after,
-.set_reminder_check::after {
+.all_day_chek::after {
   content: "\2713";
   text-align: center;
   font-size: 12px;
   color: var(--background-color);
 }
-#all_day_check:checked + .all_day_chek,
-#habit_end_check:checked + .habit_end_check,
-#set_reminder_check:checked + .set_reminder_check {
+#all_day_check:checked + .all_day_chek {
   background-color: var(--light-purple);
   color: var(--background-color);
   border-color: var(--light-purple);
 }
-
+.habit_end_check,
+.set_reminder_check {
+  background-color: var(--Light-Gray-2);
+  width: 35px;
+  height: 20px;
+  border-radius: 100px;
+  cursor: pointer;
+  position: relative;
+  transition: 0.2s ease-out;
+}
+.habit_end_check:hover,
+.set_reminder_check:hover {
+  outline: 1px solid var(--light-purple);
+  transition: none;
+}
+#habit_end_check:checked + .habit_end_check:hover,
+#set_reminder_check:checked + .set_reminder_check:hover {
+  outline: 0px;
+}
+.habit_end_check::before,
+.set_reminder_check::before {
+  position: absolute;
+  content: "";
+  background-color: var(--background-color);
+  border-radius: 100%;
+  width: 16px;
+  height: 16px;
+  margin: 2px;
+  transition: 0.2s ease-out;
+}
+#habit_end_check:checked + .habit_end_check,
+#set_reminder_check:checked + .set_reminder_check {
+  background-color: var(--light-purple);
+}
+#habit_end_check:checked + .habit_end_check::before,
+#set_reminder_check:checked + .set_reminder_check::before {
+  transform: translateX(15px);
+}
+#habit_end_check,
+#set_reminder_check {
+  display: none;
+}
 /*Styling Save button*/
 .save_btn {
   background-color: var(--light-purple);
