--- a/styles/main.css
+++ b/styles/main.css
@@ -125,7 +125,10 @@ body {
 .all_icons:hover {
   color: var(--Dark-purple);
 }
-
+.all_icons,
+.icon_item {
+  transition: all 0.3s ease-out;
+}
 .icon_item {
   border: 2px solid var(--Light-Gray);
   border-radius: 5px;
@@ -230,6 +233,7 @@ body {
   font-size: 14px;
   letter-spacing: 1px;
   cursor: pointer;
+  transition: all 0.3s ease-out;
 }
 
 .save_btn:hover {
@@ -250,13 +254,7 @@ body {
   cursor: pointer;
   width: 100px;
   text-align: center;
-}
-
-.daily_filter:hover,
-.repeat_filter:hover {
-  background-color: var(--light-purple);
-  border-color: var(--light-purple);
-  color: var(--background-color);
+  transition: all 0.3s ease-out;
 }
 
 /*Styling each day*/
@@ -267,10 +265,13 @@ body {
   height: 40px;
   cursor: pointer;
   text-align: center;
-  padding-top: 6px;
+  padding-top: 8px;
+  transition: all 0.3s ease-out;
 }
 
-.each_day:hover {
+.each_day:hover,
+.daily_filter:hover,
+.repeat_filter:hover {
   background-color: var(--light-purple);
   border-color: var(--light-purple);
   color: var(--background-color);
@@ -341,6 +342,9 @@ body {
   font-size: 14px;
 }
 /*Styling weekly repetition*/
+.weekly_days_filter {
+  display: none;
+}
 .weekly_days_number {
   display: flex;
   justify-content: space-evenly;
@@ -353,6 +357,7 @@ body {
   height: 40px;
   text-align: center;
   cursor: pointer;
+  transition: all 0.3s ease-out;
 }
 .weekly_days_count:hover {
   border-color: var(--light-purple);
@@ -364,7 +369,8 @@ body {
 }
 
 /*Class used to style any clicked item in DOM*/
-.get_focus {
+.get_focus,
+.active {
   background-color: var(--light-purple);
   border: 1px solid var(--light-purple);
   color: var(--background-color);
