--- a/styles/main.css
+++ b/styles/main.css
@@ -158,7 +158,7 @@ body {
 #all_day_check {
   display: none;
 }
-.all_day_chek {
+.all_day_check {
   width: 18px;
   height: 18px;
   border: 2px solid var(--Light-Gray);
@@ -169,13 +169,13 @@ body {
   justify-content: center;
   flex-shrink: 0;
 }
-.all_day_chek::after {
+.all_day_check::after {
   content: "\2713";
   text-align: center;
   font-size: 12px;
   color: var(--background-color);
 }
-#all_day_check:checked + .all_day_chek {
+#all_day_check:checked + .all_day_check {
   background-color: var(--light-purple);
   color: var(--background-color);
   border-color: var(--light-purple);
@@ -265,7 +265,8 @@ body {
   height: 40px;
   cursor: pointer;
   text-align: center;
-  padding-top: 8px;
+  padding-top: 6px;
+  display: block;
   transition: all 0.3s ease-out;
 }
 
@@ -369,9 +370,25 @@ body {
 }
 
 /*Class used to style any clicked item in DOM*/
-.get_focus,
-.active {
+.get_focus {
   background-color: var(--light-purple);
   border: 1px solid var(--light-purple);
   color: var(--background-color);
+}
+
+/*Styling radio inputs*/
+.icon_item_input,
+.repeat_filter_input,
+.daily_filter_input,
+.eah_day_input {
+  display: none;
+}
+
+.icon_item_input:checked + .icon_item,
+.repeat_filter_input:checked + .repeat_filter,
+.daily_filter_input:checked + .daily_filter,
+.eah_day_input:checked + .each_day {
+  background-color: var(--light-purple);
+  color: var(--background-color);
+  border-color: var(--light-purple);
 }
